--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -444,9 +444,10 @@ footer{
 .footer-content{
     background-color: #162d56;
     min-height: 40px;
-    width: 100%;
+    width: 100vw;
     padding: 10px;
     text-align: center;
+    box-sizing: border-box;
 }
 footer span{
     width: 80%;
