add border to form

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -257,14 +257,37 @@ form{
     text-align: center;
 }
 .form-container{
+    position: relative;
     width: 350px;
     /*border-left: 1px solid #ffff;
     line-height: 50px;*/
     border-radius: 10px;
-    box-shadow: 2px 2px 10px rgba(154, 144, 238, 0.953);
     text-align: center;
 }
+/*border of container*/
+.form-container::before, .form-container::after
+{
+    position: absolute;
+    content: "";
+    display: block;
+    height: 26%;
+    width: 3px;
+    border-radius: 2px  ;
+    background: #1b66e9;
+    box-shadow: 2px 2px 5px #695edafa, -2px -2px 5px #695edafa;
 
+}
+.form-container::before
+{
+    left: 0;
+    top:18%;
+}
+.form-container::after
+{
+    bottom: 18%;
+    right: 0;
+}
+/****/
 .form-container .title{
     display: block;
     font-size: 2rem;
